# IINI4003-C-pluss-pluss

./: .gitignore
assignment-01/: CMakeLists.txt  main.cpp  temperaturer
assignment-02/: CMakeLists.txt  main.cpp  oppgave6.cpp
assignment-03/: CMakeLists.txt  commodity.cpp  main.cpp  task4.cpp
assignment-04/task-01/: CMakeLists.txt  main.cpp
assignment-04/task-02/: CMakeLists.txt  main.cpp
assignment-05/: CMakeLists.txt  main.cpp
assignment-06/: CMakeLists.txt  example6.cpp  main.cpp
assignment-07/: CMakeLists.txt  Set.cpp  Set.hpp  fraction.cpp  fraction.hpp  main.cpp
assignment-08/: CMakeLists.txt  main.cpp
assignment_09/: CMakeLists.txt  main.cpp
